--- a/styles/base.css
+++ b/styles/base.css
@@ -1,56 +1,144 @@
 body{
-    font-family: Verdana;
+    font-family: 'Raleway', sans-serif;
     color: #333;
 }
 
 #main_image_div{
-    width: 100%;
-    height: 1000px;
+    background-position:  200% 200%;  
+    background-attachment: fixed;
     background-repeat: repeat;
     background-image: url("../images/fabric.png");
+    width: 100%;
+    height: 100vh;
 }
 
 h1{
     text-align: center;
     font-weight:bold;
     font-family: sans-serif;
+    margin-bottom: 100px;
 }
 
-p{
+p{ 
     font-size: 16px;
+    font-family: 'Raleway', sans-serif;
 }
 
-.my_container{
-    width: 100%;
-    margin: 0 auto;
+label{
+    font-size: 16px;
+    font-family: 'Raleway', sans-serif;
 }
 
-.col-left{
-    width: 60%;
-    padding: 10px;
-    float: left;
+#header_img{
+    padding-bottom: 50px;
+    padding-top: 100px;
 }
 
-.col-left img{
-    width: 50%;
-    border-radius: 100%;   
+.round_img{
+    border-radius: 100%;  
+    margin-bottom: 50px;
+    border: 4px solid v;
+    padding: 5px;
 }
 
-.col-right{
-    width: 40%;
-    padding: 10px;
-    float: left;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-.col-1, .col-2, .col-3{
-    width: 33%;
-    padding-left: 15px;
-    padding-right: 15px;
-    float: left;
+.feature_img{
+    border-radius: 20%;  
+    margin-bottom: 50px;
+    border: 4px solid v;
+    padding: 5px;
 }
 
 .clear { 
      clear: left;
+}
+
+.div-overlay{
+    vertical-align:50%;
+}
+
+.glyphicon{
+    font-size: 2em;
+}
+
+.centered{ 
+    display: flex;
+    align-items: center;
+}
+
+.more_space{
+    margin-bottom: 100px;
+}
+
+#ABOUT p{
+    font-size: 20px;
+}
+
+.first{
+    border: 1px solid cornflowerblue;
+    width: 30%;    
+}
+
+#PEOPLE{
+    background-image: url("../images/tree_bark.png");
+    background-repeat: repeat;
+    background-attachment: fixed;
+    width: 100%;
+}
+
+.people-overlay {
+    background-color: rgba(0,0,0,.25);
+}
+
+.carousel-inner p{
+    padding-bottom: 100px;
+    font-size: 20px;
+}
+
+#FEATURES p{
+    font-size: 20px;
+}
+
+
+.left-feature{
+    position: relative;
+    text-align: left;
+    
+    
+    margin-bottom: 65px;
+    margin-top: 35px;
+}
+
+
+.feature-icon{
+   position: absolute;
+    text-align: center;
+    left:0;
+    
+    top: -8px;
+    font-size: 20px;
+    width: 40px;
+    height: 40px;
+    
+}
+
+
+.left-feature h3{   
+    
+    text-transform: uppercase;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 21px;
+    margin-left: 70px;
+    color: #333;
+}
+
+#FEATURES{
+    background-image: url("../images/eight_horns.png");
+    background-repeat: repeat;
+    background-attachment: fixed;
+    width: 100%;
+}
+
+#FOLLOW {
+    background-color: rgba(0,0,0,.25);
 }
